docs/refs/script-api/server/0.1.0/scoreboardidentity.md
# `ScoreboardIdentity`

> 文档版本：1.21.50.25

`ScoreboardIdentity`类。script_api.mojang-minecraft.scoreboardidentity.description

## 属性

/// define
`displayName`


///

```js
read-only displayName: string;
```

/// html | div.result
//// define
`displayName`：`string`

- script_api.mojang-minecraft.scoreboardidentity.displayname.description


////

///


/// define
`id`


///

```js
read-only id: int64;
```

/// html | div.result
//// define
`id`：`int64`

- script_api.mojang-minecraft.scoreboardidentity.id.description


////

///


/// define
`type`


///

```js
read-only type: ScoreboardIdentityType;
```

/// html | div.result
//// define
`type`：[`ScoreboardIdentityType`](./scoreboardidentitytype.md)

- script_api.mojang-minecraft.scoreboardidentity.type.description


////

///


## 方法

/// define
`getEntity`


///

script_api.mojang-minecraft.scoreboardidentity.getentity.description

```js
getEntity(): Entity | undefined
```

/// html | div.result
//// define
返回值：[`Entity`](./entity.md)|`undefined`

- script_api.mojang-minecraft.scoreboardidentity.getentity.return


////

///

