docs/refs/script-api/server/1.6.0/scoreboardidentity.md
# `ScoreboardIdentity`

> 文档版本：1.21.0.21

`ScoreboardIdentity`类。script_api.@minecraft/server.scoreboardidentity.description

## 属性

/// define
`displayName`


///

```js
read-only displayName: string;
```

/// html | div.result
//// define
`displayName`：`string`

- script_api.@minecraft/server.scoreboardidentity.displayname.description


////

///


/// define
`id`


///

```js
read-only id: int64;
```

/// html | div.result
//// define
`id`：`int64`

- script_api.@minecraft/server.scoreboardidentity.id.description


////

///


/// define
`type`


///

```js
read-only type: ScoreboardIdentityType;
```

/// html | div.result
//// define
`type`：[`ScoreboardIdentityType`](./scoreboardidentitytype.md)

- script_api.@minecraft/server.scoreboardidentity.type.description


////

///


## 方法

/// define
`getEntity`


///

script_api.@minecraft/server.scoreboardidentity.getentity.description

```js
getEntity(): Entity | undefined
```

/// html | div.result
//// define
返回值：[`Entity`](./entity.md)|`undefined`

- script_api.@minecraft/server.scoreboardidentity.getentity.return


////

///


/// define
`isValid`


///

script_api.@minecraft/server.scoreboardidentity.isvalid.description

```js
isValid(): boolean
```

/// html | div.result
//// define
返回值：`boolean`

- script_api.@minecraft/server.scoreboardidentity.isvalid.return


////

///

